Fix out-of-bounds reading in URLParser when parsing improperly percent-encoded values https://bugs.webkit.org/show_bug.cgi?id=163376

Reviewed by Saam Barati.

Source/WebCore:

Covered by new API tests, which used to crash under asan.

* platform/URLParser.cpp:
(WebCore::percentDecode):
If you subtract 2 from size_t's smaller than 2, you're gonna have a bad time.

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/181198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207273 268f45cc-cd09-0410-ab3c-d52691b4dbfc